--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,7 +22,7 @@ jobs:
 		port: ${{ secrets.CLOUDWAYS_PORT }}
 		protocol: sftp
 		local-dir: ./
-		server-dir: /public_html/wp-content/themes/your-theme-name/
+		server-dir: /public_html/
 		exclude: |
 		  **/.git*
 		  **/.git*/**
