--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,24 +10,18 @@ jobs:
     runs-on: ubuntu-latest
     
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Deploy to Cloudways via SFTP
-        uses: SamKirkland/FTP-Deploy-Action@v4.3.4
-        with:
-          server: ${{ secrets.CLOUDWAYS_HOST }}
-          username: ${{ secrets.CLOUDWAYS_USERNAME }}
-          password: ${{ secrets.CLOUDWAYS_PASSWORD }}
-          port: ${{ secrets.CLOUDWAYS_PORT }}
-          protocol: sftp
-          local-dir: ./
-          server-dir: /public_html/
-          exclude: |
-            **/.git*
-            **/.git*/**
-            **/.github/**
-            **/node_modules/**
-            *.md
-            .gitignore
-            LICENSE
+    - name: Checkout code
+      uses: actions/checkout@v4
+    
+    - name: Deploy to Cloudways via SSH
+      uses: appleboy/ssh-action@v1.0.3
+      with:
+        host: ${{ secrets.CLOUDWAYS_HOST }}
+        username: ${{ secrets.CLOUDWAYS_USERNAME }}
+        password: ${{ secrets.CLOUDWAYS_PASSWORD }}
+        port: 22
+        script: |
+          cd /public_html/wp-content/themes/your-theme-name
+          git pull origin main
+          find . -type f -exec chmod 644 {} \;
+          find . -type d -exec chmod 755 {} \;
