--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,7 +21,7 @@ jobs:
         password: ${{ secrets.CLOUDWAYS_PASSWORD }}
         port: 22
         script: |
-          cd /public_html/wp-content/themes/your-theme-name
+          cd /public_html/
           git pull origin main
           find . -type f -exec chmod 644 {} \;
           find . -type d -exec chmod 755 {} \;
