--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,9 +16,9 @@ jobs:
       - name: SFTP upload
         uses: Dylan700/sftp-upload-action@latest
         with:
-          server: ${{ vars.CLOUDWAYS_HOST }}
-          username: ${{ vars.CLOUDWAYS_USERNAME }}
-          key: ${{ secrets.CLOUDWAYS_SSH_KEY }}
+          server: ${{ secrets.CLOUDWAYS_HOST }}
+          username: ${{ secrets.CLOUDWAYS_USERNAME }}
+          password: ${{ secrets.CLOUDWAYS_PASSWORD }}
           port: 22
           uploads: |
-            ./theme/ => ${{ vars.CLOUDWAYS_FOLDER }}
+            ./theme/ => ${{ secrets.CLOUDWAYS_FOLDER }}
